[gd_scene load_steps=3 format=3 uid="uid://cp6hwo4r2dkan"]

[ext_resource type="Script" path="res://geoscape/Geoscape.gd" id="1_ptq0x"]

[sub_resource type="ButtonGroup" id="ButtonGroup_6x4v4"]
resource_name = "SATCOM"

[node name="Geoscape" type="Node2D"]
script = ExtResource("1_ptq0x")

[node name="Panel" type="Panel" parent="."]
offset_right = 1139.0
offset_bottom = 634.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
offset_right = 1139.0
offset_bottom = 26.0
text = "GEOSCAPE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
offset_top = 30.0
offset_right = 1139.0
offset_bottom = 534.0
size_flags_vertical = 3

[node name="SATCOM" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_right = 567.0
offset_bottom = 504.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/SATCOM"]
layout_mode = 2
offset_right = 567.0
offset_bottom = 26.0
text = "SATCOM"
horizontal_alignment = 1

[node name="IdleButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer/SATCOM"]
layout_mode = 2
offset_top = 30.0
offset_right = 567.0
offset_bottom = 61.0
toggle_mode = true
text = "Idle"

[node name="ScanButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer/SATCOM"]
layout_mode = 2
offset_top = 65.0
offset_right = 567.0
offset_bottom = 96.0
toggle_mode = true
button_group = SubResource("ButtonGroup_6x4v4")
text = "Scan for new missions"

[node name="XCOM" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_left = 571.0
offset_right = 1139.0
offset_bottom = 504.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer/XCOM"]
layout_mode = 2
offset_right = 568.0
offset_bottom = 26.0
text = "XCOM"
horizontal_alignment = 1

[node name="RestButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer/XCOM"]
layout_mode = 2
offset_top = 30.0
offset_right = 568.0
offset_bottom = 61.0
toggle_mode = true
text = "Rest"

[node name="EmbarkButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer/XCOM"]
layout_mode = 2
offset_top = 65.0
offset_right = 568.0
offset_bottom = 96.0
toggle_mode = true
text = "Embark on new misison"

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
offset_top = 538.0
offset_right = 1139.0
offset_bottom = 569.0
text = "CONFIRM: EMBARK ON MISSION?"

[node name="TurnCounter" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
offset_top = 573.0
offset_right = 1139.0
offset_bottom = 599.0
text = "Turn: 0"
horizontal_alignment = 2

[node name="ActionButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
offset_top = 603.0
offset_right = 1139.0
offset_bottom = 634.0
text = "End Turn"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/SATCOM/IdleButton" to="." method="_on_idle_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/SATCOM/ScanButton" to="." method="_on_scan_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/XCOM/RestButton" to="." method="_on_rest_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/XCOM/EmbarkButton" to="." method="_on_embark_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ActionButton" to="." method="_on_action_button_pressed"]
